force-app/main/default/objects/Negoptim__CommercialPlanSequence__c/fields/Negoptim__BusinessUnitTarget__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__BusinessUnitTarget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Unit at the origin of the flow (To)</description>
    <label>BU Target</label>
    <referenceTo>Negoptim__Orga_BU__c</referenceTo>
    <relationshipLabel>Commercial Plan Sequences (BU Target)</relationshipLabel>
    <relationshipName>Commercial_Plan_Sequences1</relationshipName>
    <type>Lookup</type>
</CustomField>