force-app/main/default/objects/Negoptim__CommercialPlanSequence__c/fields/Negoptim__CommercialPlanDetail__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__CommercialPlanDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ligne promo de référence auquelle est attachée la séquence</description>
    <label>Promo Line</label>
    <referenceTo>Negoptim__CommercialPlanDetail__c</referenceTo>
    <relationshipLabel>Commercial Plan Sequences</relationshipLabel>
    <relationshipName>Commercial_Plan_Sequences</relationshipName>
    <type>Lookup</type>
</CustomField>