force-app/main/default/objects/Negoptim__CommercialPlanSequence__c/fields/Negoptim__Date__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Date__c</fullName>
    <description>Dans le cas où la ligne réfère à une date spécifique</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>