force-app/main/default/objects/Negoptim__CommercialPlanSequence__c/fields/Negoptim__ExtId__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ExtId__c</fullName>
    <externalId>true</externalId>
    <label>Ext id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>