force-app/main/default/objects/Negoptim__CommercialPlanSequence__c/fields/Negoptim__ExtractIdLast__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__ExtractIdLast__c</fullName>
    <label>Last Extraction id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>