force-app/main/default/objects/Negoptim__CommercialPlanSequence__c/fields/Negoptim__HierarchyElement__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__HierarchyElement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Negoptim__Orga_HE__c</referenceTo>
    <relationshipLabel>Commercial Plan Sequences</relationshipLabel>
    <relationshipName>Commercial_Plan_Sequences</relationshipName>
    <type>Lookup</type>
</CustomField>