force-app/main/default/objects/Negoptim__CommercialPlanSequence__c/fields/Negoptim__IntegtIdLast__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__IntegtIdLast__c</fullName>
    <label>Last Integration id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>