force-app/main/default/objects/Negoptim__CommercialPlanSequence__c/fields/Negoptim__MonthNumber__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__MonthNumber__c</fullName>
    <description>Mois de référence de la ligne (si type séquence est Jour / Semaine)</description>
    <label>Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>