force-app/main/default/objects/Negoptim__CommercialPlanSequence__c/fields/Negoptim__Quantity__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Quantity__c</fullName>
    <description>Quantity ordered</description>
    <label>Quantity</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>