force-app/main/default/objects/Negoptim__CommercialPlanSequence__c/fields/Negoptim__SequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__SequenceNumber__c</fullName>
    <description>Numéro de la séquence</description>
    <label>Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>