force-app/main/default/objects/Negoptim__CommercialPlanSequence__c/fields/Negoptim__WeekNumber__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__WeekNumber__c</fullName>
    <description>Semaine de référence de la ligne (si type séquence est Jour)</description>
    <label>Week</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>