force-app/main/default/objects/Negoptim__CommercialPlanSequence__c/fields/Negoptim__Year__c.field-meta.xml
<CustomField>
    <fullName>Negoptim__Year__c</fullName>
    <description>Année de référence de la ligne</description>
    <label>Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>